new_fix (Добавление фона и отправки email, звонка на телефон)

--- a/aside_menu.html
+++ b/aside_menu.html
@@ -36,10 +36,10 @@
                 <a href="#" class="menu-div__a people"><img class="menu-div__img" src="./img/menu_logo/icon_people.png" alt=""></a>
             </div>
             <div class="div-menu mail">
-                <span class="div-menu__span"> mail@cps.com</span>
+                <span class="div-menu__span"><a href="mailto:mail@cps.com" class="span__email">mail@cps.com</a></span>
             </div>
             <div class="div-menu span__phone">
-                <span class="div-menu__span">8 800 890 8900</span>
+                <span class="div-menu__span"><a href="tel:+78008908900" class="span__phone">8 800 890 8900</a></span>
             </div>
             <div class="div-menu lang">
                 <span class="div-menu__span">
